--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "PHPTools/PHPTools",
+  "name": "php_tools/php_method_tools",
   "description": "php",
   "type": "project",
   "license": "wjfeng",
