--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
   ],
   "minimum-stability": "dev",
   "require": {
-    "php": ">=5.6"
+    "php": ">=5.6",
+    "phpoffice/phpexcel": "1.8.2",
+    "aliyuncs/oss-sdk-php": "~2.0"
   },
   "autoload": {
     "psr-4": {
