Signed-off-by: 吴靖丰 <3002143185@qq.com>

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "autoload": {
     "psr-4": {
       "FileTools\\": "src/FileTools",
-      "GeneralTools\\": "src/GeneralTools"
+      "GeneralTools\\": "src/GeneralTools",
+      "Others\\": "src/Others"
     }
   }
 }
